Finalizado a etapa de Cross validation

--- a/notebooks/m07_video1_store_sales_prediction.ipynb
+++ b/notebooks/m07_video1_store_sales_prediction.ipynb
@@ -3885,6 +3885,264 @@
    "source": [
     "len(modeling_result_cv)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 8.0. PASSO 8 - HIPERPARAMETER FINE TUNNING"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8.1. Random Search\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Hiperparâmetros do modelo XGBoost com os valores que serão testados\n",
+    "param = {\n",
+    "    'n_estimators' : [1500, 1700, 2500, 3000, 3500],\n",
+    "    'eta' : [0.001, 0.01, 0.03],\n",
+    "    'max_depth' : [3, 5, 9],\n",
+    "    'subsample' : [0.1, 0.5, 0.7],\n",
+    "    'colsample_bytree' : [0.3, 0.7, 0.9],\n",
+    "    'min_child_weight' : [3, 8, 15],\n",
+    "}\n",
+    "\n",
+    "MAX_EVAL = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'n_estimators': 1500, 'eta': 0.01, 'max_depth': 3, 'subsample': 0.1, 'colsample_bytree': 0.9, 'min_child_weight': 8}\n",
+      "{'n_estimators': 3500, 'eta': 0.01, 'max_depth': 9, 'subsample': 0.7, 'colsample_bytree': 0.7, 'min_child_weight': 15}\n",
+      "{'n_estimators': 1500, 'eta': 0.03, 'max_depth': 9, 'subsample': 0.7, 'colsample_bytree': 0.3, 'min_child_weight': 3}\n",
+      "{'n_estimators': 1700, 'eta': 0.01, 'max_depth': 9, 'subsample': 0.5, 'colsample_bytree': 0.9, 'min_child_weight': 3}\n",
+      "{'n_estimators': 1700, 'eta': 0.03, 'max_depth': 5, 'subsample': 0.1, 'colsample_bytree': 0.9, 'min_child_weight': 3}\n",
+      "{'n_estimators': 1700, 'eta': 0.01, 'max_depth': 3, 'subsample': 0.7, 'colsample_bytree': 0.9, 'min_child_weight': 3}\n",
+      "{'n_estimators': 2500, 'eta': 0.001, 'max_depth': 3, 'subsample': 0.5, 'colsample_bytree': 0.3, 'min_child_weight': 15}\n",
+      "{'n_estimators': 2500, 'eta': 0.01, 'max_depth': 9, 'subsample': 0.7, 'colsample_bytree': 0.3, 'min_child_weight': 8}\n",
+      "{'n_estimators': 1500, 'eta': 0.01, 'max_depth': 3, 'subsample': 0.7, 'colsample_bytree': 0.9, 'min_child_weight': 3}\n",
+      "{'n_estimators': 3000, 'eta': 0.03, 'max_depth': 9, 'subsample': 0.5, 'colsample_bytree': 0.7, 'min_child_weight': 15}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MODEL NAME</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XGBoost</td>\n",
+       "      <td>1774.97 +/- 190.59</td>\n",
+       "      <td>0.25 +/- 0.01</td>\n",
+       "      <td>2544.36 +/- 255.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XGBoost</td>\n",
+       "      <td>818.38 +/- 141.72</td>\n",
+       "      <td>0.11 +/- 0.01</td>\n",
+       "      <td>1185.16 +/- 207.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XGBoost</td>\n",
+       "      <td>865.39 +/- 122.18</td>\n",
+       "      <td>0.12 +/- 0.01</td>\n",
+       "      <td>1249.63 +/- 188.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XGBoost</td>\n",
+       "      <td>929.53 +/- 149.83</td>\n",
+       "      <td>0.13 +/- 0.01</td>\n",
+       "      <td>1340.54 +/- 210.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XGBoost</td>\n",
+       "      <td>1027.43 +/- 121.43</td>\n",
+       "      <td>0.14 +/- 0.01</td>\n",
+       "      <td>1470.98 +/- 159.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XGBoost</td>\n",
+       "      <td>1768.97 +/- 192.54</td>\n",
+       "      <td>0.25 +/- 0.01</td>\n",
+       "      <td>2537.99 +/- 262.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XGBoost</td>\n",
+       "      <td>4108.73 +/- 493.42</td>\n",
+       "      <td>0.5 +/- 0.02</td>\n",
+       "      <td>5048.82 +/- 600.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XGBoost</td>\n",
+       "      <td>945.64 +/- 129.29</td>\n",
+       "      <td>0.13 +/- 0.01</td>\n",
+       "      <td>1368.71 +/- 189.71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XGBoost</td>\n",
+       "      <td>1791.7 +/- 197.04</td>\n",
+       "      <td>0.25 +/- 0.01</td>\n",
+       "      <td>2567.88 +/- 271.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XGBoost</td>\n",
+       "      <td>782.18 +/- 124.32</td>\n",
+       "      <td>0.11 +/- 0.01</td>\n",
+       "      <td>1134.51 +/- 185.33</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  MODEL NAME                 MAE           MAPE                RMSE\n",
+       "0    XGBoost  1774.97 +/- 190.59  0.25 +/- 0.01  2544.36 +/- 255.35\n",
+       "0    XGBoost   818.38 +/- 141.72  0.11 +/- 0.01  1185.16 +/- 207.73\n",
+       "0    XGBoost   865.39 +/- 122.18  0.12 +/- 0.01  1249.63 +/- 188.49\n",
+       "0    XGBoost   929.53 +/- 149.83  0.13 +/- 0.01  1340.54 +/- 210.67\n",
+       "0    XGBoost  1027.43 +/- 121.43  0.14 +/- 0.01  1470.98 +/- 159.45\n",
+       "0    XGBoost  1768.97 +/- 192.54  0.25 +/- 0.01  2537.99 +/- 262.93\n",
+       "0    XGBoost  4108.73 +/- 493.42   0.5 +/- 0.02  5048.82 +/- 600.72\n",
+       "0    XGBoost   945.64 +/- 129.29  0.13 +/- 0.01  1368.71 +/- 189.71\n",
+       "0    XGBoost   1791.7 +/- 197.04  0.25 +/- 0.01   2567.88 +/- 271.0\n",
+       "0    XGBoost   782.18 +/- 124.32  0.11 +/- 0.01  1134.51 +/- 185.33"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_result = pd.DataFrame()\n",
+    "\n",
+    "# Quantidade de iterações no teste de parâmetros\n",
+    "for i in range(MAX_EVAL):\n",
+    "    # Escolhendo valores aleatórios para os parâmetros\n",
+    "    hiper = {k : random.sample(v, 1)[0] for k, v in param.items()}\n",
+    "    print(hiper)\n",
+    "\n",
+    "    # Model\n",
+    "    model_xgb = xgb.XGBRegressor( \n",
+    "        objective = 'reg:squarederror',\n",
+    "        n_estimators = hiper['n_estimators'],\n",
+    "        eta = hiper['eta'],\n",
+    "        max_depth = hiper['max_depth'],\n",
+    "        subsample = hiper['subsample'],\n",
+    "        colsample_bytree = hiper['colsample_bytree'],\n",
+    "        min_child_weight = hiper['min_child_weight'])\n",
+    "\n",
+    "    # Performance\n",
+    "    result = cross_validation(x_training, 5, 'XGBoost', model_xgb)\n",
+    "    final_result =  pd.concat([final_result, result])\n",
+    "\n",
+    "final_result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8.1. Final Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Valores selecionados pelo método de tuning Random Search\n",
+    "param_tuned = {\n",
+    "    'n_estimators' : 3500,\n",
+    "    'eta' : 0.03,\n",
+    "    'max_depth' : 9,\n",
+    "    'subsample' : 0.5,\n",
+    "    'colsample_bytree' : 0.7,\n",
+    "    'min_child_weight' : 15,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Model\n",
+    "model_xgb_tuned = xgb.XGBRegressor( \n",
+    "    objective = 'reg:squarederror',\n",
+    "    n_estimators = hiper['n_estimators'],\n",
+    "    eta = hiper['eta'],\n",
+    "    max_depth = hiper['max_depth'],\n",
+    "    subsample = hiper['subsample'],\n",
+    "    colsample_bytree = hiper['colsample_bytree'],\n",
+    "    min_child_weight = hiper['min_child_weight']).fit(x_train, y_train)\n",
+    "\n",
+    "# Predição\n",
+    "yhat_xgb_tuned = model_xgb_tuned.predict(x_test)\n",
+    "\n",
+    "# Performance\n",
+    "xgb_result_tuned = ml_error('XGBoost', np.expm1(y_test), np.expm1(yhat_xgb_tuned))\n",
+    "xgb_result_tuned"
+   ]
   }
  ],
  "metadata": {
