Atualização de readme

--- a/notebooks/m07_video1_store_sales_prediction.ipynb
+++ b/notebooks/m07_video1_store_sales_prediction.ipynb
@@ -4105,11 +4105,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Valores selecionados pelo método de tuning Random Search\n",
+    "# Melhores valores selecionados pelo método de tuning Random Search\n",
     "param_tuned = {\n",
     "    'n_estimators' : 3500,\n",
     "    'eta' : 0.03,\n",
@@ -4122,9 +4122,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model Name</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XGBoost</td>\n",
+       "      <td>623.44</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>911.34</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Model Name    MAE  MAPE   RMSE\n",
+       "0    XGBoost 623.44  0.09 911.34"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Model\n",
     "model_xgb_tuned = xgb.XGBRegressor( \n",
