Atualização de readme

--- a/notebooks/m07_video1_store_sales_prediction.ipynb
+++ b/notebooks/m07_video1_store_sales_prediction.ipynb
@@ -79,7 +79,6 @@
     "\n",
     "    sns.set()\n",
     "\n",
-    "\n",
     "# ===================================================================\n",
     "# Cálculo de correlação de variaveis categóricas usando Cramér's v\n",
     "# (A fórmula está na seção 4.3)\n",
@@ -4191,6 +4190,30 @@
     "# Performance\n",
     "xgb_result_tuned = ml_error('XGBoost', np.expm1(y_test), np.expm1(yhat_xgb_tuned))\n",
     "xgb_result_tuned"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "| Atributos | Descrição |\n",
+    "| ------ | ------- |\n",
+    "| Id | Identificador da transação |\n",
+    "| Store | Identificador único para cada loja |\n",
+    "| Sales | Volume de vendas no dia (Variável target) |\n",
+    "| Customers | Número de clientes no dia |\n",
+    "| Open | Indica se a loja está aberta ou fechada |\n",
+    "| StateHoliday | Indica feriado estadual, algumas lojas fecham nos feriados |\n",
+    "| SchoolHoliday | Indica feriado escolar |\n",
+    "| StoreType | Tipo da loja |\n",
+    "| Assortment | Indica o nível de variedade de produtos da loja |\n",
+    "| CompetitionDistance | Distância em metros do concorrente mais próximo |\n",
+    "| CompetitionOpenSince | Mês e ano que abriu o concorrente mais próximo |\n",
+    "| Promo | Indica se está ocorrendo alguma promoção na loja |\n",
+    "| Promo2 | Indica se o prazo final da promoção foi extendido |\n",
+    "| Promo2Since | Indica mês e ano que a loja iniciou a Promo2 |\n",
+    "| PromoInterval | Indica os intervalos consecutivos em que a Promo2 é iniciada |\n"
    ]
   }
  ],
