Atualização de readme

--- a/notebooks/m07_video1_store_sales_prediction.ipynb
+++ b/notebooks/m07_video1_store_sales_prediction.ipynb
@@ -19,6 +19,7 @@
    "outputs": [],
    "source": [
     "import math\n",
+    "import random\n",
     "import inflection\n",
     "import datetime\n",
     "import numpy                as np\n",
@@ -3916,15 +3917,6 @@
     "}\n",
     "\n",
     "MAX_EVAL = 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random"
    ]
   },
   {
