Finalização do passo 8, análise de erros

--- a/notebooks/m07_video1_store_sales_prediction.ipynb
+++ b/notebooks/m07_video1_store_sales_prediction.ipynb
@@ -19,6 +19,7 @@
    "outputs": [],
    "source": [
     "import math\n",
+    "import pickle\n",
     "import random\n",
     "import inflection\n",
     "import datetime\n",
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 129,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-01T23:02:22.838817Z",
@@ -102,6 +103,12 @@
     "# Função para calcular o Mean Absolute Percentage error\n",
     "def mean_absolute_percentage_error(y, yhat):\n",
     "    return np.mean(np.abs((y - yhat) / y))\n",
+    "\n",
+    "# ===================================================================\n",
+    "# Função para calcular o Mean Percentage error para saber se o modelo \n",
+    "# está superestimando ou subestimando\n",
+    "def mean_percentage_error(y, yhat):\n",
+    "    return np.mean((y - yhat) / y)\n",
     "\n",
     "# Função que calcula as métricas de erros dos modelos. Recebe como parâmetros \n",
     "# o nome do modelo, os valores reais de y e os valores preditos de y e retorna \n",
@@ -4185,9 +4192,38 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 128,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# Salvando o modelo escolhido com a biblioteca pickle (serializado)\n",
+    "# para não ser necessário rodar novamente\n",
+    "pickle.dump(xgb_result_tuned, open('../model/model_rossmann.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.008380545264872112"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Verificação se o modelo está superestimando (MPE positivo) ou \n",
+    "# subestimando (MPE negativo)\n",
+    "MPE = mean_percentage_error(np.expm1(y_test), np.expm1(yhat_xgb_tuned))\n",
+    "MPE"
+   ]
   }
  ],
  "metadata": {
