--- a/notebooks/m08_video1_store_sales_prediction.ipynb
+++ b/notebooks/m08_video1_store_sales_prediction.ipynb
@@ -4470,7 +4470,88 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Classe Rossmann"
+    "# Classe Rossmann\n",
+    "Class Rossmann(object):\n",
+    "    def __init__(self):\n",
+    "        state = 1\n",
+    "\n",
+    "    def data_cleaning(self, df1):      \n",
+    "\n",
+    "        # colunas originais do dataset pego com ctrl-c no columns\n",
+    "        col_old = [ \"Store\", \"DayOfWeek\", \"Date\", \"Sales\", \"Customers\", \"Open\", \"Promo\", \"StateHoliday\",\n",
+    "                    \"SchoolHoliday\", \"StoreType\", \"Assortment\", \"CompetitionDistance\", \"CompetitionOpenSinceMonth\",\n",
+    "                    \"CompetitionOpenSinceYear\", \"Promo2\", \"Promo2SinceWeek\", \"Promo2SinceYear\", \"PromoInterval\",]\n",
+    "\n",
+    "        # Usando a função underscore da biblioteca inflection para substituir camelCase por snake_case\n",
+    "        col_new = list(map(lambda x: inflection.underscore(x), col_old))\n",
+    "        df1.columns = col_new\n",
+    "\n",
+    "        df1['date'] = pd.to_datetime(df1['date'])\n",
+    "\n",
+    "        # Preenchendo valores faltantes de competition_distance\n",
+    "        df1[\"competition_distance\"] = df1[\"competition_distance\"].apply(\n",
+    "            lambda x: 200000 if math.isnan(x) else x\n",
+    "        )\n",
+    "\n",
+    "        # Preenchendo valores faltantes de competition_open_since_month\n",
+    "        df1[\"competition_open_since_month\"] = df1.apply(\n",
+    "            lambda x: x[\"date\"].month\n",
+    "            if math.isnan(x[\"competition_open_since_month\"])\n",
+    "            else x[\"competition_open_since_month\"],\n",
+    "            axis=1,\n",
+    "        )\n",
+    "\n",
+    "        # Preenchendo valores faltantes de competition_open_since_year\n",
+    "        df1[\"competition_open_since_year\"] = df1.apply(\n",
+    "            lambda x: x[\"date\"].year\n",
+    "            if math.isnan(x[\"competition_open_since_year\"])\n",
+    "            else x[\"competition_open_since_year\"],\n",
+    "            axis=1,\n",
+    "        )\n",
+    "\n",
+    "        # Preenchendo valores faltantes de promo2_since_week\n",
+    "        df1[\"promo2_since_week\"] = df1.apply(\n",
+    "            lambda x: x[\"date\"].week\n",
+    "            if math.isnan(x[\"promo2_since_week\"])\n",
+    "            else x[\"promo2_since_week\"],\n",
+    "            axis=1,\n",
+    "        )\n",
+    "\n",
+    "        # Preenchendo valores faltantes de promo2_since_year\n",
+    "        df1[\"promo2_since_year\"] = df1.apply(\n",
+    "            lambda x: x[\"date\"].year\n",
+    "            if math.isnan(x[\"promo2_since_year\"])\n",
+    "            else x[\"promo2_since_year\"],\n",
+    "            axis=1,\n",
+    "        )\n",
+    "\n",
+    "        # Preenchendo valores faltantes de promo_interval\n",
+    "        # Criando um dicionário para auxiliar\n",
+    "        # Na aula foi usado Fevereiro == Fev e Setembro == Sep mas\n",
+    "        # no dataset está Fevereiro == Feb e Setembro == Sept\n",
+    "        month_map = {\n",
+    "            1: \"Jan\", 2: \"Fev\", 3: \"Mar\", 4: \"Apr\", 5: \"May\", 6: \"Jun\",\n",
+    "            7: \"Jul\", 8: \"Aug\", 9: \"Sep\", 10: \"Oct\", 11: \"Nov\", 12: \"Dec\",\n",
+    "        }\n",
+    "        \n",
+    "        # Completa com zeros os valores faltantes\n",
+    "        df1['promo_interval'].fillna(0, inplace=True)\n",
+    "        # Coluna que recebe o mês (num) de df['date'] convertido para a sigla\n",
+    "        df1['month_map'] = df1['date'].dt.month.map(month_map)\n",
+    "        # Recebe 1 caso o mês de month_map esteja em promo_interval caso contrário 0\n",
+    "        df1['is_promo'] = df1.apply(\n",
+    "            lambda x: 0 if x['promo_interval'] == 0 \n",
+    "            else 1 if x['month_map'] in x['promo_interval'].split(',') \n",
+    "            else 0, \n",
+    "            axis=1)\n",
+    "\n",
+    "        # Alterando os tipos de dados\n",
+    "        df1['competition_open_since_month'] = df1['competition_open_since_month'].astype('int64')\n",
+    "        df1['competition_open_since_year'] = df1['competition_open_since_year'].astype('int64')\n",
+    "        df1['promo2_since_week'] = df1['promo2_since_week'].astype('int64')\n",
+    "        df1['promo2_since_year'] = df1['promo2_since_year'].astype('int64')\n",
+    "\n",
+    "        return df1"
    ]
   },
   {
