--- a/notebooks/m08_video1_store_sales_prediction.ipynb
+++ b/notebooks/m08_video1_store_sales_prediction.ipynb
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-01T23:02:22.857961Z",
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-01T23:02:22.859961Z",
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-01T23:02:22.862959Z",
@@ -3928,11 +3928,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "56c4c1e79f103e4841af8008239f5bd876a6c51acee6835a625032a7e230bb6b"
-  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.8 ('ds_em_producao': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -3976,6 +3973,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a7147a394fc8238dba7a84411466eadaf2ecd9a7822133cebd1634c6e1ee9eb3"
+   }
   }
  },
  "nbformat": 4,
