--- a/notebooks/m08_video1_store_sales_prediction.ipynb
+++ b/notebooks/m08_video1_store_sales_prediction.ipynb
@@ -1206,7 +1206,7 @@
    },
    "outputs": [],
    "source": [
-    "# Apagar as linhas não utilizadas\n",
+    "# Apagar as linhas em que as lojas estão fechadas\n",
     "df3 = df3[ (df3['open'] != 0) & (df3['sales'] > 0) ] "
    ]
   },
@@ -1231,7 +1231,7 @@
    },
    "outputs": [],
    "source": [
-    "# Apagar as colunas não utilizadas\n",
+    "# Apagar as colunas que foram usadas para derivar outras\n",
     "drop_col = ['open', 'customers', 'promo_interval', 'month_map']\n",
     "df3.drop(drop_col, inplace=True, axis=1)"
    ]
