--- a/notebooks/m08_video1_store_sales_prediction.ipynb
+++ b/notebooks/m08_video1_store_sales_prediction.ipynb
@@ -2403,7 +2403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2497,15 +2497,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # O Boruta não recebe como parâmetro um df e sim um numpy.array\n",
-    "# X_train_n = X_train.drop(['sales', 'date'], axis=1).values\n",
-    "# y_train_n = y_train.values.ravel()\n",
+    "# O Boruta não recebe como parâmetro um df e sim um numpy.array\n",
+    "X_train_n = X_train.drop(['sales', 'date'], axis=1).values\n",
+    "y_train_n = y_train.values.ravel()\n",
     "\n",
-    "# # Define RandomForestRegressor\n",
-    "# rf = RandomForestRegressor(n_jobs=-1)\n",
+    "# Define RandomForestRegressor\n",
+    "rf = RandomForestRegressor(n_jobs=-1)\n",
     "\n",
-    "# # Define o Boruta\n",
-    "# boruta = BorutaPy(rf, n_estimators='auto', verbose=2, random_state=42).fit(X_train_n, y_train_n)"
+    "# Define o Boruta\n",
+    "boruta = BorutaPy(rf, n_estimators='auto', verbose=2, random_state=42).fit(X_train_n, y_train_n)"
    ]
   },
   {
@@ -2521,15 +2521,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Armazena os índices das colunas selecionadas e ranqueadas pelo Boruta\n",
-    "# cols_selected = boruta.support_.tolist()\n",
+    "# Armazena os índices das colunas selecionadas e ranqueadas pelo Boruta\n",
+    "cols_selected = boruta.support_.tolist()\n",
     "\n",
-    "# X_train_fs = X_train.drop(['sales', 'date'], axis=1)\n",
-    "# # Colunas selecionadas pelo Boruta\n",
-    "# cols_selected_boruta = X_train_fs.iloc[:, cols_selected].columns.to_list()\n",
+    "X_train_fs = X_train.drop(['sales', 'date'], axis=1)\n",
+    "# Colunas selecionadas pelo Boruta\n",
+    "cols_selected_boruta = X_train_fs.iloc[:, cols_selected].columns.to_list()\n",
     "\n",
-    "# # Colunas não selecionadas pelo Boruta\n",
-    "# cols_not_selected_boruta = list(np.setdiff1d(X_train_fs.columns, cols_selected_boruta))"
+    "# Colunas não selecionadas pelo Boruta\n",
+    "cols_not_selected_boruta = list(np.setdiff1d(X_train_fs.columns, cols_selected_boruta))"
    ]
   },
   {
