--- a/notebooks/m07_video1_store_sales_prediction.ipynb
+++ b/notebooks/m07_video1_store_sales_prediction.ipynb
@@ -4770,11 +4770,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "56c4c1e79f103e4841af8008239f5bd876a6c51acee6835a625032a7e230bb6b"
-  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.8 ('streamlit': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -4818,6 +4815,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "1b50b41b3339bd83219528e3713c4bded5025894b7b94d9ae6e8cd079cb69799"
+   }
   }
  },
  "nbformat": 4,
