--- a/notebooks/m08_video1_store_sales_prediction.ipynb
+++ b/notebooks/m08_video1_store_sales_prediction.ipynb
@@ -2403,7 +2403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2419,7 +2419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2431,7 +2431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -2440,7 +2440,7 @@
        "Timestamp('2015-06-19 00:00:00')"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2454,7 +2454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -2583,7 +2583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -2613,7 +2613,7 @@
        " 'sales']"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2662,7 +2662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2671,9 +2671,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "\"['month_sin', 'month_cosin', 'day_sin', 'day_cosin', 'week_of_year_sin', 'week_of_year_cosin', 'day_of_week_sin', 'day_of_week_cosin'] not in index\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Baby\\Documents\\Python\\repos\\ds_em_producao\\rossmann_sales_prediction\\notebooks\\m08_video1_store_sales_prediction.ipynb Célula: 128\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Baby/Documents/Python/repos/ds_em_producao/rossmann_sales_prediction/notebooks/m08_video1_store_sales_prediction.ipynb#ch0000128?line=0'>1</a>\u001b[0m \u001b[39m# Criando os datasets de treino e teste com as features selecionadas no passo anterior (Boruta)\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Baby/Documents/Python/repos/ds_em_producao/rossmann_sales_prediction/notebooks/m08_video1_store_sales_prediction.ipynb#ch0000128?line=1'>2</a>\u001b[0m x_train \u001b[39m=\u001b[39m X_train[cols_selected_boruta]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Baby/Documents/Python/repos/ds_em_producao/rossmann_sales_prediction/notebooks/m08_video1_store_sales_prediction.ipynb#ch0000128?line=2'>3</a>\u001b[0m x_test \u001b[39m=\u001b[39m X_test[cols_selected_boruta]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Baby/Documents/Python/repos/ds_em_producao/rossmann_sales_prediction/notebooks/m08_video1_store_sales_prediction.ipynb#ch0000128?line=4'>5</a>\u001b[0m \u001b[39m# Dataset com as features selecionadas pelo Boruta mais ['date', 'sales']\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\Baby\\Documents\\Python\\repos\\ds_em_producao\\lib\\site-packages\\pandas\\core\\frame.py:3511\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3509\u001b[0m     \u001b[39mif\u001b[39;00m is_iterator(key):\n\u001b[0;32m   3510\u001b[0m         key \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(key)\n\u001b[1;32m-> 3511\u001b[0m     indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49m_get_indexer_strict(key, \u001b[39m\"\u001b[39;49m\u001b[39mcolumns\u001b[39;49m\u001b[39m\"\u001b[39;49m)[\u001b[39m1\u001b[39m]\n\u001b[0;32m   3513\u001b[0m \u001b[39m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[0;32m   3514\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mgetattr\u001b[39m(indexer, \u001b[39m\"\u001b[39m\u001b[39mdtype\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m) \u001b[39m==\u001b[39m \u001b[39mbool\u001b[39m:\n",
+      "File \u001b[1;32mc:\\Users\\Baby\\Documents\\Python\\repos\\ds_em_producao\\lib\\site-packages\\pandas\\core\\indexes\\base.py:5782\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[1;34m(self, key, axis_name)\u001b[0m\n\u001b[0;32m   5779\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m   5780\u001b[0m     keyarr, indexer, new_indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[1;32m-> 5782\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_raise_if_missing(keyarr, indexer, axis_name)\n\u001b[0;32m   5784\u001b[0m keyarr \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtake(indexer)\n\u001b[0;32m   5785\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, Index):\n\u001b[0;32m   5786\u001b[0m     \u001b[39m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\Baby\\Documents\\Python\\repos\\ds_em_producao\\lib\\site-packages\\pandas\\core\\indexes\\base.py:5845\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[1;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[0;32m   5842\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNone of [\u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m] are in the [\u001b[39m\u001b[39m{\u001b[39;00maxis_name\u001b[39m}\u001b[39;00m\u001b[39m]\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m   5844\u001b[0m not_found \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[39m.\u001b[39mnonzero()[\u001b[39m0\u001b[39m]]\u001b[39m.\u001b[39munique())\n\u001b[1;32m-> 5845\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mnot_found\u001b[39m}\u001b[39;00m\u001b[39m not in index\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mKeyError\u001b[0m: \"['month_sin', 'month_cosin', 'day_sin', 'day_cosin', 'week_of_year_sin', 'week_of_year_cosin', 'day_of_week_sin', 'day_of_week_cosin'] not in index\""
+     ]
+    }
+   ],
    "source": [
     "# Criando os datasets de treino e teste com as features selecionadas no passo anterior (Boruta)\n",
     "x_train = X_train[cols_selected_boruta]\n",
